fix(tasbar): Fix vertical pinned tabs spacings

--- a/theme/parts/tabsbar.css
+++ b/theme/parts/tabsbar.css
@@ -77,13 +77,14 @@
 	/* Vertical */
 	&[orient="vertical"] {
 		--tabstrip-inner-border: 1px solid var(--gnome-border-color) !important;
-		grid-gap: var(--gnome-toolbar-spacing) !important;
+		grid-gap: 0 !important;
 
 		&[expanded] {
 			--tab-inner-inline-margin: var(--gnome-toolbar-padding) !important;
 		}
 
-		#tabbrowser-arrowscrollbox-periphery > #tabs-newtab-button {
+		#tabbrowser-arrowscrollbox-periphery > #tabs-newtab-button,
+		#vertical-tabs-newtab-button {
 			margin-block: var(--gnome-toolbar-padding) !important;
 		}
 	}
@@ -181,13 +182,7 @@ spacer[part=overflow-start-indicator], spacer[part=overflow-end-indicator] {
 			--tab-selected-bgcolor: var(--gnome-tabbar-tab-active-background-contrast) !important;
 			--gnome-tabbar-tab-close-overlay-bg: var(--gnome-tabbar-tab-active-background-contrast) !important;
 		}
-	}
-
-	/* Tweak margins on expanded vertical pinned tabs */
-	#tabbrowser-tabs[orient="vertical"][expanded] &[pinned] {
-		padding-block-start: var(--gnome-toolbar-padding) !important;
-		padding-bottom: 0 !important;
-	}
+	}	
 
 	/* Horizontal tabs only */
 	#tabbrowser-tabs[orient="horizontal"] & {
